♿️ admin: fix contrast color

--- a/admin/app/styles/components/target-profiles/details.scss
+++ b/admin/app/styles/components/target-profiles/details.scss
@@ -15,7 +15,7 @@
   }
 
   &__subtitle {
-    color: var(--pix-neutral-100);
+    color: var(--pix-neutral-500);
     font-size: 0.9rem;
   }
 
